Initial commit for migration to Java 10